# real-time-collaborate

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  sw-loader.js
crates/app/: Cargo.toml  index.html
crates/app/src/: canvas.rs  commands.rs  export.rs  lib.rs  main.rs  state.rs  sync.rs  tools.rs  types.rs  ui.rs  vim.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  reducers.rs  tables.rs
crates/service-worker/: Cargo.toml
crates/service-worker/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  point.rs  types.rs
crates/stdb-client/: Cargo.toml
crates/stdb-client/src/: connection.rs  decode.rs  lib.rs  signals.rs
docs/superpowers/plans/: 2026-04-01-collaborative-drawing-app.md  2026-04-01-e2e-playwright-tests.md
docs/superpowers/specs/: 2026-04-01-collaborative-drawing-app-design.md  2026-04-01-e2e-playwright-design.md
tests/: e2e.md
tests/e2e/: global-setup.ts  global-teardown.ts  helpers.ts  package-lock.json  package.json  playwright.config.ts  playwright.fast.config.ts
tests/e2e/specs/: canvas-loads.spec.ts  copy-paste.spec.ts  cursor-presence.spec.ts  delete-sync.spec.ts  export.spec.ts  help-overlay.spec.ts  keyboard-arrow.spec.ts  keyboard-drawing.spec.ts  keyboard-freehand.spec.ts  keyboard-pan.spec.ts  keyboard-resize.spec.ts  keyboard-rotate.spec.ts  keyboard-select.spec.ts  keyboard-zoom.spec.ts  local-delete.spec.ts  local-drawing.spec.ts  move-element.spec.ts  text-input.spec.ts  two-browser-sync.spec.ts  undo-redo.spec.ts  vim-commands.spec.ts  vim-cursor.spec.ts  vim-modes.spec.ts  visual-mode.spec.ts
