[workspace]
resolver = "2"
members = [
    "crates/shared",
    "crates/server",
    "crates/stdb-client",
    "crates/app",
    "crates/service-worker",
]

[workspace.dependencies]
shared = { path = "crates/shared" }
spacetimedb = "2.0"
spacetimedb-lib = { version = "2.0", default-features = false }
spacetimedb-sdk = { version = "2.0", default-features = false }
leptos = { version = "0.7", features = ["csr"] }
web-sys = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
