[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "app"
path = "src/main.rs"

[lib]
name = "app"
path = "src/lib.rs"

[dependencies]
shared = { workspace = true }
stdb-client = { path = "../stdb-client" }
leptos = { workspace = true }
web-sys = { workspace = true, features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "Window",
    "Document",
    "DomRect",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "HtmlAnchorElement",
    "HtmlBodyElement",
    "HtmlElement",
    "Element",
    "EventTarget",
    "Node",
] }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
console_error_panic_hook = "0.1"
log = { workspace = true }
wasm-logger = "0.2"
wasm-bindgen-futures = "0.4"
spacetimedb-client-api-messages = "2.1"
spacetimedb-lib = { workspace = true }
