[package]
name = "service-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
web-sys = { workspace = true, features = [
    "ExtendableEvent",
    "FetchEvent",
    "ServiceWorkerGlobalScope",
    "Cache",
    "CacheStorage",
    "Request",
    "Response",
    "ResponseInit",
    "Headers",
] }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
