[package]
name = "stdb-client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }
spacetimedb-sdk = { workspace = true, features = ["browser"] }
spacetimedb-lib = { workspace = true }
leptos = { workspace = true }
web-sys = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = "0.4"
log = { workspace = true }
